--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,18 +28,27 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
   flutter_hooks:
   niku:
   get:
+
   camera:
   image_picker:
+  image:
+
   tflite_flutter:
   tflite_flutter_helper:
-  image:
+
+  hive:
+  hive_flutter:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  hive_generator: ^1.1.0
+  build_runner: ^2.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
