:broom: feat: polish

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
 
   modal_bottom_sheet: ^2.0.0
 
+  flutter_svg:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -67,6 +69,7 @@ flutter:
   assets:
    - assets/labels.txt
    - assets/cats.tflite
+   - assets/cat.svg
 
    # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
