--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,23 +29,22 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  flutter_hooks:
-  niku:
-  get:
+  flutter_hooks: ^0.18.0
+  niku: ^1.1.2
+  get: ^4.3.8
 
-  camera:
-  image_picker:
-  image:
+  camera: ^0.8.1+7
+  image: ^3.0.2
+  image_picker: ^0.8.4
 
-  tflite_flutter:
-  tflite_flutter_helper:
+  tflite_flutter: ^0.9.0
+  tflite_flutter_helper: ^0.3.0
 
-  hive:
-  hive_flutter:
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
 
   modal_bottom_sheet: ^2.0.0
-
-  flutter_svg:
+  flutter_svg: ^0.22.0
 
 dev_dependencies:
   flutter_test:
